<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="video"
            type="com.example.android.devbyteviewer.domain.Video" />

        <variable
            name="videoCallback"
            type="com.example.android.devbyteviewer.ui.VideoClick" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="216dp"
                app:layout_constraintBottom_toBottomOf="@+id/thumbsup"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/thumbsup"
                app:srcCompat="@android:drawable/arrow_up_float" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/thumbsDown"
                app:layout_constraintEnd_toStartOf="@+id/thumbsDown"
                app:layout_constraintTop_toTopOf="@+id/thumbsDown"
                app:srcCompat="@android:drawable/arrow_down_float" />

            <TextView
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{video.word}"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                tools:text="@string/search"
                app:layout_constraintStart_toStartOf="@+id/left_well"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/thumbsup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(video.thumbs_up)}"
                android:layout_marginTop="16dp"
                tools:text="@string/thumbsUp"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/word"
                app:layout_constraintTop_toBottomOf="@+id/word" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{video.author}"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/right_well"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/thumbsup"
                tools:text="@string/author" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{video.definition}"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/right_well"
                app:layout_constraintStart_toStartOf="@+id/left_well"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="@string/definition" />

            <TextView
                android:id="@+id/thumbsDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(video.thumbs_down)}"
                tools:text="@string/thumbsDown"
                app:layout_constraintBaseline_toBaselineOf="@+id/thumbsup"
                app:layout_constraintEnd_toStartOf="@+id/right_well" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_well"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_well"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
